@@ -1,3 +1,7 @@
+==
+  * Minor Enhancements
+    * Better handling of unexpected exceptions in conditions
+
 == 0.7.17 / 2009-08-25
   * Bug Fixes
     * Fix the glob and directory config loading for -c option
